name:                la-cursormenu
version:             0.1.0.0
synopsis:            Extension to Lightarrow for menus operated with a cursor
-- description:
homepage:            https://github.com/githubuser/la-cursormenu#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Stuart
maintainer:          alex@das.li
copyright:           2020 Alex Stuart
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Lightarrow.CursorMenu
                       Lightarrow.CursorMenu.ListMenu
                       Lightarrow.CursorMenu.MenuSign
  build-depends:       base >= 4.7 && < 5,
                       binary,
                       bearriver,
                       lightarrow,
                       linear,
                       mtl,
                       optics
  default-extensions:  Arrows
                       ScopedTypeVariables
                       TupleSections